@@ -98,6 +98,15 @@ tree.on('click dblclick', 'a', function(evt) {
 });
 
 //////////////////////////////////////////////////////////////////////////////
+// ●ツリーを閉じる
+//////////////////////////////////////////////////////////////////////////////
+$('#close-button').click(function(evt) {
+	tree.dynatree("getRoot").visit(function(dtnode){
+		dtnode.expand(false);
+	});
+});
+
+//////////////////////////////////////////////////////////////////////////////
 // ●コンテンツキーの編集
 //////////////////////////////////////////////////////////////////////////////
 function editNode( node ) {
