@@ -113,6 +113,15 @@ tree.on('click dblclick', 'a', function(evt) {
 });
 
 //////////////////////////////////////////////////////////////////////////////
+// ●ツリーを閉じる
+//////////////////////////////////////////////////////////////////////////////
+$('#close-button').click(function(evt) {
+	tree.dynatree("getRoot").visit(function(dtnode){
+		dtnode.expand(false);
+	});
+});
+
+//////////////////////////////////////////////////////////////////////////////
 // ●データからタイトルを設定
 //////////////////////////////////////////////////////////////////////////////
 function set_node_title(node) {
