@@ -27,6 +27,8 @@
 
 	<p>コンテンツkeyを編集するときは、ダブルクリック等で編集ボックスを出し、編集後にEnterを押してください。</p>
 
+	<div><button id="close-button" type="button">ノードを閉じる</button></div>
+
 	<div class="treebox" id="tree" data-url="<@Basepath><@v.blogpub_dir>contents.json?<@v.blog.json_tm>"></div>
 
 	<button type="submit" id="submit">変更を保存する</button>
