@@ -27,6 +27,8 @@
 
 	<p>タグ名を編集するときは、ダブルクリック等で編集ボックスを出し、編集後にEnterを押してください。</p>
 
+	<div><button id="close-button" type="button">ノードを閉じる</button></div>
+
 	<div class="treebox" id="tree" data-url="<@Basepath><@v.blogpub_dir>taglist.json?<@v.blog.json_tm>"></div>
 
 	<button type="button" id="join-children">選択タグに子要素を結合</button>
