@@ -2,8 +2,10 @@
 
 *Ver3.32 : 2019/12/xx
 
+-タグツリー、コンテンツツリーを一括で閉じるボタンを追加。
 -【スマホ】ドラッグアンドドロップの操作性を改善しました。
 -【Plugin】【ja】カレンダーの祝日（天皇誕生日）を変更しました。
+-【記法】script-deferブロック記法を追加。
 -【記法/Fix】Google画像検索等のURLを変更しました((過去記事に対しては、ブログ記事の再構築が必要です。))。（[https://adiary.adiary.jp/0414#c7:Thanks to jimba]）
 -【Fix】ブログ一覧のテーブル表示でソートカラムを選択すると画面が切り替わる。
 
